# archa

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Makefile  README.md
Formula/: archa.rb
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  icons.tsx  index.css
src/: backend.rs  claude.rs  main.rs  model.rs  opencode.rs
wiki/: architecture.md  opencode.md
