[package]
name = "archa"
version = "0.1.2"
edition = "2021"
description = "Local-first Agent session reader and explorer with an embedded web UI"
authors = ["Aero <aero.windwalker@gmail.com>"]
repository = "https://github.com/aeroxy/archa"
license = "MIT"
include = [
    "src/**/*",
    "frontend/dist/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "build.rs",
    "Makefile"
]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket server
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Embedded frontend
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"

[build-dependencies]
rust-embed = "8"
